--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,13 +1,61 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultra.net.nz/thyemeleaf/layout"
-    layout:decorate=~{layout}>
+    layout:decorate="~{layout}">
 
 <head>
-    <title>Inicio</title>
+    <title layout:fragment="title">Inicio</title>
 </head>
 
-<body layou:fragment="body" style="background-color: aqua;">
+<body>
+    <section layout:fragment="content">
+        <h1>Bienvenido</h1>
+        <div class="container mt-4 mb-4">
+            <div class="row">
+                <div class="col">
+                    <a th:href="@{/cajero/nuevoCajeroForm}">
+                        <button class="btn btn-primary">Inaugurar un cajero Nuevo</button>
+                    </a>
 
+                </div>
+                <div class="col">
+                    <form th:action="@{/cajero/cliente/simularCambioDia}" method="get">
+                        <button class="btn btn-primary" type="submit">🕒 Simular cambio de día</button>
+                    </form>
+                    <div th:if="${mensaje != null}">
+                        <h3 th:text="${mensaje}"></h3>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+        <div class="table-responsive">
+            <table class="table table-striped table-bordered">
+                <thead class="table-dark">
+                    <tr>
+                        <th>ID Cajero</th>
+                        <th>Saldo</th>
+                        <th>Ubicación</th>
+                        <th>Acciones</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr th:each="cajero : ${cajeros}">
+                        <td th:text="${cajero.idcajero}"></td>
+                        <td th:text="${cajero.saldo}"></td>
+                        <td th:text="${cajero.ubicacion}"></td>
+                        <td>
+                            <a th:href="@{/cajero/detalle/{id}(id=${cajero.idcajero})}"
+                                class="btn btn-primary btn-sm">Ver
+                                datos</a>
+                            <a th:href="@{/cajero/retirar/{idcajero}(idcajero=${cajero.idcajero})}"
+                                class="btn btn-primary btn-sm">Retirara dinero</a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </section>
 </body>
 
 </html>
