--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <!-- Encabezado -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" th:href="@{/cajero}">Risosu IT</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -28,18 +28,18 @@
 
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" th:href="@{/cajero/nuevoCajeroForm}">Inaugurar
-                                cajero</a></li>
-                        <li class="nav-item"><a class="nav-link" th:href="@{/cajero/cliente/simularCambioDia}">Rellenar cajeros</a></li>
+                        <!-- <li class="nav-item"><a class="nav-link" th:href="@{/cajero/nuevoCajeroForm}">Inaugurar
+                                cajero</a></li> -->
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
 
-    <main class="container py-4" layout:fragment="content">
+    <main class="container py-4 my-5" layout:fragment="content">
 
     </main>
+
 </body>
 
 </html>
