--- a/src/main/resources/templates/detalleCajero.html
+++ b/src/main/resources/templates/detalleCajero.html
@@ -8,36 +8,116 @@
 
 <body>
     <section layout:fragment="content">
-        <h1>Detalles del cajero</h1>
+        <div class="col-12 mb-3">
+            <a th:href="@{/cajero}" class="btn btn-outline-dark">
+                <i class="bi bi-arrow-left"></i> Volver al inicio
+            </a>
+        </div>
+
+        <div class="text-center mb-4">
+            <h2 id="titulo-cajeros">Detalles del cajero</h2>
+        </div>
 
         <div th:if="${#lists.isEmpty(datos)}">
             <p>No se encontraron datos.</p>
         </div>
 
+        <div th:if="${alertMessage}" th:class="'alert alert-' + ${alertType} + ' alert-dismissible fade show'"
+            role="alert">
+            <span th:text="${alertMessage}" class="mx-auto">Mensaje</span>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <form th:action="@{/cajero/detalle/simularCambioDia/{id}(id=${datos[0].idcajero})}" method="get">
+                        <button type="submit" class="btn btn-warning btn-lg mb-3"><i class="bi bi-arrow-clockwise"></i>
+                            Rellenar Cajero</button>
+                    </form>
+                </div>
+                <div class="col">
+                    <a th:href="@{/cajero/retirar/{idcajero}(idcajero=${datos[0].idcajero})}"
+                        class="btn btn-success btn-lg mb-3"><i class="bi bi-cash-coin"></i> Retirar dinero</a>
+                </div>
+            </div>
+        </div>
+
+
         <div th:if="${!#lists.isEmpty(datos)}">
-            <p><strong>ID Cajero:</strong> <span th:text="${datos[0].idcajero}"></span></p>
-            <p><strong>Ubicación:</strong> <span th:text="${datos[0].ubicacion}"></span></p>
-            <p><strong>Saldo:</strong> <span th:text="${datos[0].saldo}"></span></p>
-            <h4>Inventario</h4>
-            <table class="table table-striped table-bordered">
+            <div class="fs-5">
+                <p><strong>ID Cajero:</strong> <span th:text="${datos[0].idcajero}"></span></p>
+                <p><strong>Ubicación:</strong> <span th:text="${datos[0].ubicacion}"></span></p>
+                <p><strong>Saldo:</strong> <span th:text="${datos[0].saldo}"></span></p>
+            </div>
+
+            <div class="text-center text-success fs-1 mb-3">
+                <h4 id="titulo-inventario">Inventario</h4>
+            </div>
+            <table class="table table-striped table-bordered text-center fs-5">
                 <thead class="table-dark">
                     <tr>
-                        <th>ID Inventario</th>
-                        <th>Denominación</th>
-                        <th>Cantidad</th>
-                        <th>Tipo</th>
+                        <th class="w-auto text-nowrap">ID Inventario</th>
+                        <th class="w-25">Denominación</th>
+                        <th class="w-50">Cantidad</th>
+                        <th class="w-25">Tipo</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr th:each="i : ${datos}">
                         <td th:text="${i.idinventario}">0</td>
-                        <td th:text="${i.denominacion}">0.00</td>
+                        <td th:text="| $ ${i.denominacion}|">0.00</td>
                         <td th:text="${i.cantidad}">0</td>
-                        <td th:text="${i.tipo}">Tipo</td>
+                        <td>
+                            <span th:text="${i.tipo}">Tipo</span>
+                            <i th:if="${#strings.equalsIgnoreCase(i.tipo, 'billete')}"
+                                class="bi bi-cash-stack text-success ms-2"></i>
+                            <i th:if="${#strings.equalsIgnoreCase(i.tipo, 'moneda')}"
+                                class="bi bi-coin text-warning ms-2"></i>
+                        </td>
                     </tr>
                 </tbody>
             </table>
         </div>
+        <style>
+            #titulo-cajeros {
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                font-size: 2.5rem;
+                font-weight: bold;
+                color: #1a73e8;
+                text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+                padding-bottom: 10px;
+                display: inline-block;
+                margin-top: 20px;
+                animation: fadeIn 1s ease-in-out;
+            }
+
+            #titulo-inventario {
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                font-size: 2.5rem;
+                font-weight: bold;
+                color: #07d52a;
+                text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+                padding-bottom: 10px;
+                display: inline-block;
+                margin-top: 20px;
+                animation: fadeIn 1s ease-in-out;
+            }
+        </style>
+        <script>
+            $(document).ready(function () {
+                $("table tbody tr").each(function () {
+                    const cantidadText = $(this).find("td:eq(2)").text().trim();
+                    const cantidad = parseFloat(cantidadText);
+
+                    if (cantidad === 0) {
+                        $(this).find("td:eq(2)").css({ color: "red", fontWeight: "bold" });
+                    } else {
+                        $(this).find("td:eq(2)").css({ color: "green", fontWeight: "bold" });
+                    }
+                });
+            });
+        </script>
     </section>
 </body>
 
