--- a/src/main/resources/templates/detalleCajero.html
+++ b/src/main/resources/templates/detalleCajero.html
@@ -38,7 +38,11 @@
                 </div>
                 <div class="col">
                     <a th:href="@{/cajero/retirar/{idcajero}(idcajero=${datos[0].idcajero})}"
-                        class="btn btn-success btn-lg mb-3"><i class="bi bi-cash-coin"></i> Retirar dinero</a>
+                        th:class="'btn btn-success btn-lg mb-3 ' + (${datos[0].saldo} == 0 ? 'disabled' : '')"
+                        th:attr="style=${datos[0].saldo} == 0 ? 'pointer-events: none; opacity: 0.6;' : null"
+                        th:title="${datos[0].saldo} == 0 ? 'Sin saldo disponible' : null">
+                        <i class="bi bi-cash-coin"></i> Retirar dinero
+                    </a>
                 </div>
             </div>
         </div>
