Vista y autentificacion de Usuarios

--- a/src/main/resources/templates/detalleCajero.html
+++ b/src/main/resources/templates/detalleCajero.html
@@ -9,7 +9,7 @@
 <body>
     <section layout:fragment="content">
         <div class="col-12 mb-3">
-            <a th:href="@{/cajero}" class="btn btn-outline-dark">
+            <a th:href="@{/cajero/index}" class="btn btn-outline-dark">
                 <i class="bi bi-arrow-left"></i> Volver al inicio
             </a>
         </div>
