--- a/src/main/resources/templates/retiro.html
+++ b/src/main/resources/templates/retiro.html
@@ -123,7 +123,7 @@
 <body>
     <section layout:fragment="content" class="container mt-5">
         <div class="col-12 mb-3">
-            <a th:href="@{/cajero}" class="btn btn-outline-dark">
+            <a th:href="@{/cajero/index}" class="btn btn-outline-dark">
                 <i class="bi bi-arrow-left"></i> Volver al inicio
             </a>
         </div>
