--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,27 +4,24 @@
 
 <head>
     <title layout:fragment="title">Inicio</title>
+
+    <style>
+        #titulo-cajeros {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-size: 2.5rem;
+            font-weight: bold;
+            color: #1a73e8;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+            padding-bottom: 10px;
+            display: inline-block;
+            margin-top: 20px;
+            animation: fadeIn 1s ease-in-out;
+        }
+    </style>
 </head>
 
 <body>
     <section layout:fragment="content">
-        <div class="container">
-            <div sec:authorize="isAuthenticated()">
-                Bienvenido, usuario autenticado.
-            </div>
-
-            <div sec:authorize="hasRole('Administrador')">
-                Este contenido solo lo ven los programadores.
-            </div>
-
-            <div sec:authorize="hasRole('Comprador')">
-                Este contenido solo lo ven los administradores.
-            </div>
-
-            <div sec:authorize="hasRole('Usuario')">
-                Este contenido lo ven los usuarios analistas.
-            </div>
-        </div>
 
         <div class="container mt-4 mb-4 t-5">
             <div th:if="${alertMessage}" th:class="'alert alert-' + ${alertType} + ' alert-dismissible fade show'"
@@ -32,6 +29,7 @@
                 <span th:text="${alertMessage}">Mensaje</span>
                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
+            <span class="navbar-text text-white" th:if="${username}" th:text="${username}">Usuario</span>
             <div class="row align-items-stretch">
                 <div class="col">
                     <div class="card shadow rounded-4 p-4 mb-4 h-100">
@@ -105,19 +103,7 @@
                 </tbody>
             </table>
         </div>
-        <style>
-            #titulo-cajeros {
-                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-                font-size: 2.5rem;
-                font-weight: bold;
-                color: #1a73e8;
-                text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-                padding-bottom: 10px;
-                display: inline-block;
-                margin-top: 20px;
-                animation: fadeIn 1s ease-in-out;
-            }
-        </style>
+
         <script>
             $(document).ready(function () {
                 $("table tbody tr").each(function () {
@@ -133,19 +119,18 @@
                     }
                 });
             });
-
-            fetch("http://localhost:8081/auth/status", {
-                credentials: "include"
-            })
-                .then(response => {
-                    if (!response.ok) {
-                        window.location.href = "/Usuario/iniciarSesion";
-                    }
-                })
-                .catch(error => {
-                    console.error("Error al verificar autenticación:", error);
-                    window.location.href = "/Usuario/iniciarSesion";
-                });
+            // fetch("http://localhost:8081/auth/status", {
+            //     credentials: "include"
+            // })
+            //     .then(response => {
+            //         if (!response.ok) {
+            //             window.location.href = "/Usuario";
+            //         }
+            //     })
+            //     .catch(error => {
+            //         console.error("Error al verificar autenticación:", error);
+            //         window.location.href = "/Usuario";
+            //     });
         </script>
     </section>
 </body>
