--- a/src/main/resources/templates/iniciarSesion.html
+++ b/src/main/resources/templates/iniciarSesion.html
@@ -11,11 +11,11 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <title>Iniciar Sesion</title>
+    <title>Login</title>
 </head>
 
 <body>
-    <section class="vh-100" style="background-color: #f8f9fa;">
+    <section class="vh-100 fs-5" style="background-color: #f8f9fa;">
         <div class="container py-5 h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div th:if="${alertMessage}" th:class="'alert alert-' + ${alertType} + ' alert-dismissible fade show'"
@@ -25,12 +25,13 @@
                 </div>
 
                 <div class="col col-xl-10">
-                    <div class="card" style="border-radius: 1rem;">
-                        <div class="row g-0">
-                            <div class="col-md-6 col-lg-5 d-none d-md-flex justify-content-center align-items-center"
-                                style="height: 100%;">
-                                <img src="https://cdn-icons-png.flaticon.com/512/5957/5957356.png" alt="login form"
-                                    class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
+                    <div class="card h-100" style="border-radius: 1rem;">
+                        <div class="row g-0 h-100">
+                            <div
+                                class="col-md-6 col-lg-5 d-none d-md-flex justify-content-center align-items-center h-auto">
+                                <img th:src="@{/img/logofenix.png}" alt="login form"
+                                    class="w-100 h-100 object-fit-cover" style="border-radius: 1rem 0 0 1rem;" />
+
                             </div>
                             <div class="col-md-6 col-lg-7 d-flex align-items-center">
                                 <div class="card-body p-4 p-lg-5 text-black">
@@ -40,7 +41,7 @@
                                         <div class="d-flex align-items-center mb-3 pb-1">
                                             <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
                                             <span class="h1 fw-bold mb-0">
-                                                <i class="bi bi-robot"></i> Login</span>
+                                                <i class="bi bi-fire" style="color: #F44336;"></i> Login</span>
                                         </div>
 
                                         <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Bienvenido Inicia
@@ -99,6 +100,7 @@
             });
         });
     </script>
+
 </body>
 
 </html>
