--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -21,6 +21,7 @@
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" th:href="@{/cajero/index}">Risosu IT</a>
+
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -28,8 +29,9 @@
 
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
-                        <!-- <li class="nav-item"><a class="nav-link" th:href="@{/cajero/nuevoCajeroForm}">Inaugurar
-                                cajero</a></li> -->
+                        <li class="nav-item"><a class="nav-link" th:href="@{/cajero/index}">Administrar Cajeros</a></li>
+                        <li class="nav-item"><a class="nav-link" th:href="@{/Usuario/index}">Administrar Usuarios</a>
+                        </li>
                     </ul>
                 </div>
 
