--- a/src/main/resources/templates/iniciarSesion.html
+++ b/src/main/resources/templates/iniciarSesion.html
@@ -36,7 +36,7 @@
                             <div class="col-md-6 col-lg-7 d-flex align-items-center">
                                 <div class="card-body p-4 p-lg-5 text-black">
 
-                                    <form action="http://localhost:8081/autenticateTheUser" method="post">
+                                    <form th:action="@{http://localhost:8081/autenticateTheUser}" method="post">
 
                                         <div class="d-flex align-items-center mb-3 pb-1">
                                             <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
@@ -90,7 +90,7 @@
                 btn.addEventListener("click", () => {
                     const inputId = btn.getAttribute("data-toggle");
                     const input = document.getElementById(inputId);
-                    const Icon = btn.querySelector("i");
+                    const icon = btn.querySelector("i"); // Corregido aquí
 
                     const isPassword = input.type === "password";
                     input.type = isPassword ? "text" : "password";
